<resources>
    <string name="app_name">MyLib</string>

    <string name="common_done">Done</string>

    <string name="book_detail_title">Title</string>

    <string name="book_detail_subtitle">Subtitle</string>

    <string name="book_detail_authors">Authors</string>

    <string name="book_detail_publishers">Publishers</string>

    <string name="book_detail_pages">Pages</string>

    <string name="book_detail_rating">Rating</string>

    <string name="book_detail_year">Year</string>

    <string name="book_detail_price">Price</string>

    <string name="book_detail_desc">Description</string>

    <string name="book_detail_isbn">Isbn</string>

    <string name="book_detail_url">URL</string>

    <string name="book_detail_free_ebook">free ebook</string>

    <string name="book_detail_memo">Memo</string>

    <string name="book_detail_save">Save Memo</string>

    <string name="book_detail_delete">Delete Memo</string>

    <string name="tab_new">New</string>

    <string name="tab_search">Search</string>

    <string name="tab_bookmark">Book Mark</string>

    <string name="bookmark_sort_added">Added Sort</string>

    <string name="bookmark_sort_price">Price Sort</string>

    <string name="bookmark_sort_publish">Publish Order</string>

    <string name="bookmark_sort_rating">Rating Order</string>
</resources>