<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_tab_layout"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#d8d8d8"
        app:layout_constraintBottom_toTopOf="@id/bottom_tab_layout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/new_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tab_new"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/search_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tab_search"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/bookmark_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tab_bookmark"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>